--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://archive.skoch.in/events.skoch.in/" />
+<meta http-equiv="refresh" content="0; url=https://exhibitiontemplate.skoch.in/events.skoch.in/" />
